--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "ETC5521 Assignment 1"
 subtitle: "Your title"
-team: [FILL]
+team: Magpie
 author:
-  - [FILL]
-  - [FILL]
+  - Junhao Wang 
+  - Priya Ravindra Dingorkar
 date: "`r Sys.Date()`"
 output: 
   html_document
