--- a/Priya_Rough_Work for Analysis.Rmd
+++ b/Priya_Rough_Work for Analysis.Rmd
@@ -27,12 +27,19 @@ Write your data description under the header “Data description” in index.Rmd
 
 ## Data Description
 
-It is through data collection that a business or management has the quality information they need to make informed decisions from further analysis, study, and research
+It is through data collection that a business or management has the quality information they need to make informed decisions from further analysis, study, and research. In this report, we will be doing exploratory, data analysis on the topic of analysis is [**College Tuition, diversity, and Pay Dataset**](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-03-10/readme.md)
+ 
 
 ### Source of the Data
 
+The origin of this data set is US Department of Education.
+
+
+
 
 ### Detail Structure of Data
+
+This data, which has been obtained through
 
 ### Collection Methods
 
