Added diversity datatype

--- a/Priya_Rough_Work for Analysis.Rmd
+++ b/Priya_Rough_Work for Analysis.Rmd
@@ -7,9 +7,12 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(dplyr)
+library(kableExtra)
 ```
 
-```{r, message = FALSE}
+```{r, message = FALSE, echo=FALSE}
 tuition_cost <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/tuition_cost.csv')
 
 tuition_income <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/tuition_income.csv') 
@@ -30,7 +33,20 @@ Write your data description under the header “Data description” in index.Rmd
 It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. We will perform exploratory, data review in this study on the subject of [**College Tuition, Diversity, and Pay Dataset**](https:/github.com / rfordatascience / tidytuesday / blob / master / data/2020/2020-03-10 / readme.md). This collection of data primarily receives all the information from various sources but originally from the US Department of Education.
 
 The data, taken from the original pages, turned out to be very large in size, which is why the author, for the convenience of the audience and to produce informative results, filtered the data into five comma-separated documents using web scraping in R with the support of the rvest package.
- 
+
+Let's look at the small snippets of the various data sets, and better understand the variables
+
+1. The diversity_school data set comes [The Chronicle of Higher Education](https://www.chronicle.com/article/student-diversity-at-4-725-institutions).
+
+```{r ds, echo=FALSE}
+head(diversity_school) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+```
+
+-- Name has data type character properties that describe the school name
+-- Total Enrollment has double datatype properties representing the total number of students enrolled
+-- State with character datatype representing the various states
+-- Category with character properties defining the group Group / Racial / Gender
+-- Enrollment with double datatype properties specifying the specific enrollment.
 
 ### Source of the Data
 
