--- a/index.Rmd
+++ b/index.Rmd
@@ -42,9 +42,11 @@ Secondary Questions
 
 # Data description
 
-It is through data collection that a business or management has the quality information they need to make informed decisions from further analysis, study, and research. In this report, we will be doing exploratory, data analysis on the topic of analysis is [**College Tuition, diversity, and Pay Dataset**](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-03-10/readme.md)
+It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. We will perform exploratory, data review in this study on the subject of [**College Tuition, Diversity, and Pay Dataset**](https:/github.com / rfordatascience / tidytuesday / blob / master / data/2020/2020-03-10 / readme.md). This collection of data primarily receives all the information from various sources but originally from the US Department of Education.
 
+The data, taken from the original pages, turned out to be very large in size, which is why the author, for the convenience of the audience and to produce informative results, filtered the data into five comma-separated documents using web scraping in R with the support of the rvest package.
 
+Let's look at the small snippets of the various data sets, and get a better understanding of the variables
 
 
 
