add the primary question

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,7 @@ diversity_school <- readr::read_csv('https://raw.githubusercontent.com/rfordatas
 # Research Question
 
 Primary Question
-
+ How valuable is the investment in education among universities?
 
 Secondary Questions
 
