edit primary question, and add first secondary question.

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,10 +43,11 @@ diversity_school <- readr::read_csv('https://raw.githubusercontent.com/rfordatas
 # Research Question
 
 Primary Question
- How valuable is the investment in education among universities?
+ How valuable is the investment in education among America universities?
 
 Secondary Questions
-
+ How does the tution fee vary across the different types of intistutions?
+ 
 
 # Data description
 
