--- a/index.Rmd
+++ b/index.Rmd
@@ -60,6 +60,13 @@ This can show how much burden a student has taken.
 This information can be drawn from salary_potential, if middle-career pay differ a lot from early-career pay, then we believe there is a well career development in that university.
  
 
+
+```{r fig.height=25,fig.width=35}
+salary_potential <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/salary_potential.csv')
+new<-salary_potential%>% mutate(improvement= (mid_career_pay-early_career_pay)/early_career_pay)
+new%>%select(name,improvement,state_name)%>%  ggplot(mapping = aes(x=reorder(state_name,+improvement),y=improvement))+geom_bar(stat='identity') + coord_flip() 
+```
+
 # Data description
 
 It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. We will perform exploratory, data review in this study on the subject of [**College Tuition, Diversity, and Pay Dataset**](https:/github.com / rfordatascience / tidytuesday / blob / master / data/2020/2020-03-10 / readme.md). This collection of data primarily receives all the information from various sources but originally from the US Department of Education.
