--- a/Priya_Rough_Work for Analysis.Rmd
+++ b/Priya_Rough_Work for Analysis.Rmd
@@ -59,84 +59,47 @@ tut_div <- dplyr::left_join(tuition_cost, diversity_school, by = c("name", "stat
 
 ```{r}
 library(viridis)
+library(plotly)
 
 diversity_school <- diversity_school %>% mutate(Per = enrollment/total_enrollment*100)
 
-ggplot(diversity_school, aes(category,Per, fill = category)) + theme(axis.text.x = element_text(angle=90)) + 
+boxplot <- ggplot(diversity_school, aes(category,Per, fill = category)) + theme(axis.text.x = element_text(angle=90)) + 
   geom_boxplot(outlier.colour="black", outlier.shape=16,
-             outlier.size=0.63, width = 0.75) +
+             outlier.size=0.5, width = 0.75) +
   theme(legend.position="none") 
-```
 
+interactive_boxplot <- ggplotly(boxplot)
 
+interactive_boxplot
 
-
-
-
-
-
-```{r}
-library(ggplot2)
-theme_set(theme_bw())
-g <- ggplot(tuition_cost, aes(in_state_total,out_of_state_total)) 
-g + geom_jitter(aes(col=type)) 
 ```
 
 ```{r}
-library(ggplot2)
-g <- ggplot(tuition_cost, aes(in_state_tuition, out_of_state_tuition, color = type)) +
-  geom_point() +  
-  facet_wrap(~type, scales = "free") +  
-  scale_x_log10() 
-g
-```
-
-```{r}
-library(ggplot2)
 library(plotly)
-theme_set(theme_classic())
-g <- ggplot(tuition_cost, aes(in_state_tuition))
-g + geom_density(aes(fill=factor(type)), alpha=0.8) + 
-   facet_wrap(~type, scales = "free") +  
-  scale_x_log10() 
-    
+
+barplot <- ggplot(historical_tuition, aes(x = year, y = tuition_cost, fill = tuition_type, width = 0.75), position = "dodge") + 
+   theme(axis.text.x = element_text(angle=65, vjust=0.6)) + 
+  geom_bar(stat="identity", position = "dodge", color = "black")
+
+interactive_barplot <- ggplotly(barplot)
+
+interactive_barplot
+
 ```
 
-```{r, message=FALSE}
-library(ggridges)
-library(ggplot2)
-library(viridis)
-library(hrbrthemes)
-library(gridExtra)
 
 
-ridges_dat <- tuition_cost %>% dplyr::filter(tuition_cost$type != "Other")
 
 
-p1 <- ggplot(ridges_dat, aes(x = in_state_tuition, y = type, fill = stat(x))) +
-  geom_density_ridges_gradient(scale = 3, rel_min_height = 0.01) + 
-  scale_fill_viridis(name = "Range of Tution Fees in USD") + 
-  labs(title = 'Distribution of Tuition Fees of Residents in US') + theme_ridges(font_size = 13, grid = TRUE) +
-  xlab("Tution fee in USD for the residents of USA")+
-   ylab("Type of Insitution")
 
-p2 <- ggplot(ridges_dat, aes(x = out_of_state_tuition, y = type, fill = stat(x))) +
-  geom_density_ridges_gradient(scale = 3, rel_min_height = 0.01) + 
-  scale_fill_viridis(name = "Range of Tution Fees in USD") + 
-  labs(title = 'Distribution of Tuition Fees of Non Residents in US') + theme_ridges(font_size = 13, grid = TRUE) +
-  xlab("Tution fee in USD for the non-residents of USA") +
-  ylab("Type of Insitution")
 
-grid.arrange(p1,p2)
-```
 
-```{r}
-library(ggplot2)
-g <- ggplot(historical_tuition, aes(year, tuition_cost, color = tuition_type)) +
-  geom_point() +  
-  facet_wrap(~tuition_type, scales = "free") +  
-  scale_x_log10() 
-g
-```
+
+
+
+
+
+
+
 
 
