--- a/index.Rmd
+++ b/index.Rmd
@@ -1,31 +1,32 @@
 ---
 title: "ETC5521 Assignment 1"
-subtitle: "Your title"
+subtitle: "College Tuition, Diversity, and Pay"
 team: Magpie
 author:
   - Junhao Wang 
   - Priya Ravindra Dingorkar
 date: "`r Sys.Date()`"
 output: 
-  html_document
+  bookdown::html_document2: default
 ---
 
 [This assignment is for ETC5521 Assignment 1 by Team `r rmarkdown::metadata$team` comprising of `r knitr::combine_words(rmarkdown::metadata$author)`.]{style="color:#006DAE;"}
-
-
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(dplyr)
 library(kableExtra)
+library(bookdown)
 ```
 
-# Introduction and motivation
+# Acknowledgements
 
-[FILL] Give the bigger picture of the data, and inspire the reader to learn more about the problem by reading your analysis. 
+Our sincere gratitude goes out for their guidance and encouragement to Professor Dianne Cook, Dr Emi Tanka, and the tutors Sayani Gupta and Sherry Zhang. Their culminating efforts have placed us in a position where we can generate this report collaboratively.
 
-- Junhao, add the introduction and motivation
+# Introduction and Motivation
+
+Ed, please fill in here
 
 
 ```{r dat-load, message = FALSE, echo=FALSE}
@@ -42,13 +43,13 @@ diversity_school <- readr::read_csv('https://raw.githubusercontent.com/rfordatas
 
 # Research Question
 
-### Primary Question
+## Primary Question
 
 How valuable is the investment in education among America universities? 
 
 Since tuition fee is relatively high for most students, or their families,value for money is of great concern. This question is to decover how highly valued are the tuition fees among universities in America. 
 
-### Secondary Questions
+## Secondary Questions
 
 * How does the tuition fee vary across the different types of institutions? 
 This information can be drawn from tuition cost, and can give a point of view of the American education system.
@@ -59,26 +60,23 @@ This can show how much burden a student has taken.
 * How is student's career development among America universities? 
 This information can be drawn from salary_potential, if middle-career pay differ a lot from early-career pay, then we believe there is a well career development in that university.
  
-
-
-```{r fig.height=25,fig.width=35}
-salary_potential <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/salary_potential.csv')
-new<-salary_potential%>% mutate(improvement= (mid_career_pay-early_career_pay)/early_career_pay)
-new%>%select(name,improvement,state_name)%>%  ggplot(mapping = aes(x=reorder(state_name+improvement),y=improvement))+geom_bar(stat='identity') +coord_flip() 
-```
-
 # Data description
 
-It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. We will perform exploratory, data review in this study on the subject of [**College Tuition, Diversity, and Pay Dataset**](https:/github.com / rfordatascience / tidytuesday / blob / master / data/2020/2020-03-10 / readme.md). This collection of data primarily receives all the information from various sources but originally from the US Department of Education.
+It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. 
+
+We will perform exploratory, data review in this study on the subject of [**College Tuition, Diversity, and Pay Dataset**](https:/github.com / rfordatascience / tidytuesday / blob / master / data/2020/2020-03-10 / readme.md). 
+
+This collection of data primarily receives all the information from various sources but originally from the US Department of Education.
 
 The data, taken from the original pages, turned out to be very large in size, which is why the author, for the convenience of the audience and to produce informative results, filtered the data into five comma-separated documents using web scraping in R with the support of the rvest package.
 
 Let's look at the small snippets of the various data sets, and get a better understanding of the variables
 
-1. The diversity_school data set comes [The Chronicle of Higher Education](https://www.chronicle.com/article/student-diversity-at-4-725-institutions).
+## Data on Diversity 
+The diversity_school data set comes [The Chronicle of Higher Education](https://www.chronicle.com/article/student-diversity-at-4-725-institutions).
 
 ```{r ds, echo=FALSE}
-head(diversity_school) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+head(diversity_school,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
 ```
 
 - Name has data type character properties that describe the school name
@@ -87,14 +85,11 @@ head(diversity_school) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("
 - Category with character properties defining the group Group / Racial / Gender
 - Enrollment with double datatype properties specifying the specific enrollment.
 
-```{r, message=FALSE, echo=TRUE}
-glimpse(diversity_school)
-```
-
-2. The historical_tution dataset been obtained from [U.S. Department of Education, National Center for Education Statistics](https://nces.ed.gov/fastfacts/display.asp?id=76)
+## Data on History 
+The historical_tuition dataset been obtained from [U.S. Department of Education, National Center for Education Statistics](https://nces.ed.gov/fastfacts/display.asp?id=76)
 
 ```{r ht, echo=FALSE}
-head(historical_tuition) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+head(historical_tuition,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
 ```
 
 - type variable having character datatype describes the Type of school (All, Public, Private)
@@ -102,72 +97,46 @@ head(historical_tuition) %>% kableExtra::kable() %>% kableExtra::kable_styling(c
 - tuition_type having	character datatype refers to duration of the degree, Tuition Type All Constant (dollar inflation adjusted), 4 year degree constant, 2 year constant, Current to year, 4 year current, 2 year current
 - tuition_cost having	double datatype represents the education fees/Tuition cost in USD
 
-```{r, message=FALSE, echo=TRUE}
-glimpse(historical_tuition)
-```
-
-3. Salary_potential data set origins from [Payscales](https://www.payscale.com/college-salary-report/best-schools-by-state/bachelors/new-hampshire).
+## Data on Salary Potential
+Salary_potential data set origins from [Payscales](https://www.payscale.com/college-salary-report/best-schools-by-state/bachelors/new-hampshire).
 
 ```{r sp, echo=FALSE}
-head(salary_potential) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+head(salary_potential,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
 ```
 
 - rank having	double datatype properties defines the potential salary rank within state
-- name using character datatype explains the Name of school
-- state_name having	character datatype defines the state name
 - early_career_pay having double datatype defines the	estimated early career pay in USD
 - mid_career_pay having double datatype defines the	estimated mid career pay in USD
 - make_world_better_percent having double datatype represents the	percent of alumni who think they are making the world a better place
 -stem_percent having double datatype defines the percent of student body in science, technology, engineering and mathematics (STEM)
 
-```{r, message=FALSE, echo=TRUE}
-glimpse(salary_potential)
-```
-
-4. Tuition cost
+## Data on the Tuition Cost
 
 The Tuition cost data set is obtained from [the Chronicle of Higher Education.](https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19)
 
 ```{r tc, echo=FALSE}
-head(tuition_cost) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+head(tuition_cost,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
 ```
 
-- name which has character datatype which represent the School name
-- state having character datatype denotes the	State name
-- state_code having character datatype depicts State Abbreviation
-- type having character denotes	Type: Public, private, for-profit
-- degree_length having character datatype gives us information about the duration of the 4 year or 2 year degree
-- room_and_board having double datatype which denote Room and board in USD
 - in_state_tuition having double datatype depicts the Tuition fee for in-state residents in USD
 - out_of_state_tuition	double	Tuition for out-of-state residents in USD
 
-```{r, message=FALSE, echo=TRUE}
-glimpse(tuition_cost)
-```
-
-5. Tuition Income
+## Data on Tuition Income
 
 The tuition income has been obtained from the dataset [Tution Tracker](https://www.tuitiontracker.org/) and [Priceconomics](https://priceonomics.com/ranking-the-most-and-least-diverse-colleges-in/)
 
 ```{r ti, echo=FALSE}
-head(tuition_income) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+head(tuition_income,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
 ```
  
 - campus having	character datatype depicts whether the school is	On or off-campus
 - net_cost having double datatype denotes Net-cost - average actually paid after scholarship/award
 - income_lvl having	character datatype gives u information about the	Income bracket
 
-```{r, message=FALSE, echo=TRUE}
-glimpse(tuition_income)
-```
 
-## Cleaning script
+## Data Structure and Cleaning Process
 
-All the information that has been gather in these different data files have been done through web scraping using the rvest library, html_nodes, html_url and creating dataset in tibble and mutating new columns and later binding rows together
-
-## Detail Structure of Data
-
-All the data has been scraped and written in csv and later, using the readr function the csv have been read in to R environment.
+All the information gathered in these different data files was achieved by web scraping using the rvest library, html nodes, html url, and generating data set in tibble, mutating new columns and linking rows together later on. All the data was scraped and written in csv and later, the csv was read in to R environment using the readr function.
 
 # Analysis and findings
 
